Fixed card title for mobile version

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -404,6 +404,9 @@ h1 {
     font-size: 2.5rem;
     color: #333;
     margin: 0.5rem 0; }
+    @media only screen and (max-width: 28em) {
+      .card__title {
+        font-size: 2rem; } }
   .card__subtitle {
     color: #777;
     font-size: 1.5rem;
