--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -34,6 +34,10 @@
     font-size: 2.5rem;
     color: #333;
     margin: 0.5rem 0;
+
+    @media only screen and(max-width: 28em) {
+      font-size: 2rem;   
+    }
   }
 
   &__subtitle {
