--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,8 +1,3 @@
-$font-primary: 'Quicksand', sans-serif;
-$font-secondary: 'Montserrat', sans-serif;
-
-$color-yellow: #ffce00;
-
 *,
 *::before,
 *::after {
@@ -32,34 +27,6 @@ li {
   list-style: none;
 }
 
-.white {
-  color: #fff;
-}
-
-.html5 {
-  color: #e34f26;
-}
-
-.css3 {
-  color: #3B5998;
-}
-
-.javascript {
-  color: #f7df1e;
-}
-
-.sass {
-  color: #c69;
-}
-
-.mongodb {
-  color: #589636;
-}
-
-.nodejs {
-  color: #215732;
-}
-
-.arrow {
-  color: #00a8e0;
+h1 {
+  font-family: $font-primary;
 }
