--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+@import 'abstracts/helpers';
 @import 'base';
 @import 'layout';
-@import 'typography';
 @import 'header';
 @import 'content';
 @import 'portfolio';
