--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 10;
 
-  @media only screen and(max-width: 41em) {
+  @include responsive-41em {
     flex-direction: column;
   }
 
@@ -14,13 +14,13 @@
     display: flex;
     justify-content: flex-end;
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       justify-content: center;
       align-items: flex-end;
       flex: 1 1 55vw;
     }
 
-    @media only screen and(max-width: 28em) {
+    @include responsive-28em {
       flex-basis: 65vw;
     }
   }
@@ -37,7 +37,7 @@
     position: relative;
     background-color: #fff;
 
-    @media only screen and(max-width: 28em) {
+    @include responsive-28em {
       transform: translateY(4rem); 
     }
   }
@@ -48,7 +48,7 @@
     flex-direction: column;
     justify-content: space-around;
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       flex: 1 1 45vw;
     }
   }
@@ -60,17 +60,17 @@
     margin-right: 7rem;
     margin-top: 3rem;
 
-    @media only screen and(max-width: 50em) {
+    @include responsive-50em {
       margin-right: 3rem;
       margin-top: 5rem; 
     }
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       align-items: center;
       margin: 2rem 0 0 2rem;
     }
 
-    @media only screen and(max-width: 28em) {
+    @include responsive-28em {
       margin-top: 4rem; 
     }
   }
@@ -84,24 +84,24 @@
       margin: 1rem 2rem 0 0;
       text-align: right;
 
-      @media only screen and (max-width: 75em) {
+      @include responsive-75em {
         font-size: 5rem;
       }
 
-      @media only screen and(max-width: 62.5em) {
+      @include responsive-625em {
         font-size: 3rem;
       }
 
-      @media only screen and(max-width: 50em) {
+      @include responsive-50em {
         font-size: 2.8rem;
       }
 
-      @media only screen and(max-width: 41em) {
+      @include responsive-41em {
         text-align: center;
         font-size: 5rem;
       }
 
-      @media only screen and(max-width: 28em) {
+      @include responsive-28em {
         font-size: 3rem;
       }
     }
@@ -115,23 +115,23 @@
     text-align: justify;
     line-height: 2rem;
 
-    @media only screen and(max-width: 75em) {
+    @include responsive-75em {
       margin-top: 6rem;
     }
 
-    @media only screen and(max-width: 62.5em) {
+    @include responsive-625em {
       font-size: 1.2rem;
       padding-left: 7rem;
       margin-top: 7rem;
     }
 
-    @media only screen and(max-width: 50em) {
+    @include responsive-50em {
       font-size: 1rem;
       padding-left: 3rem;
       margin-right: 3rem;
     }
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       margin-top: 4rem;
     }
   }
@@ -147,7 +147,7 @@
 
   &__buttons {
     
-    @media only screen and(max-width: 31.25em) {
+    @include responsive-3125em {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -156,11 +156,11 @@
     }
   }
 
-  @media only screen and(max-width: 50em) {
+  @include responsive-50em {
     margin-right: 5rem;   
   }
 
-  @media only screen and(max-width: 41em) {
+  @include responsive-41em {
    justify-content: center; 
    align-items: center;
    margin-right: 0;
@@ -172,15 +172,15 @@
   &:not(:last-child) {
     margin-right: 3rem;
 
-    @media only screen and(max-width: 62.5em) {
+    @include responsive-625em {
       margin-right: 2rem;
     }
 
-    @media only screen and(max-width: 50em) {
+    @include responsive-50em {
       margin-right: 1.5rem;
     }
 
-    @media only screen and(max-width: 31.25em) {
+    @include responsive-3125em {
       margin-right: 0;
     }
   }
@@ -189,7 +189,7 @@
     color: $color-yellow;
   }
 
-  @media only screen and(max-width: 31.25em) {
+  @include responsive-3125em {
     margin-top: 1.5rem;
     width: 200%;
     text-align: center;
@@ -202,21 +202,21 @@
   padding: 1rem 4rem;
   transition: all .3s ease-in-out;
 
-  @media only screen and(max-width: 75em) {
+  @include responsive-75em {
     font-size: 1.2rem;
     padding: 1rem 3rem;
   }
 
-  @media only screen and(max-width: 75em) {
+  @include responsive-75em {
     font-size: 1rem;
     padding: 1rem 2rem;   
   }
 
-  @media only screen and(max-width: 50em) {
+  @include responsive-50em {
     font-size: .8rem;
     padding: .7rem 1.5rem;
 
-    @media only screen and(max-width: 31.25em) {
+    @include responsive-3125em {
       font-size: 1rem;
       padding: 1rem 2rem;
     }
