--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,17 +6,17 @@
   position: relative;
   z-index: 10;
 
-  @media only screen and(max-width: 41em) {
+  @include responsive-41em {
     align-items: flex-end;
     min-height: 10vh;
   }
 
-  @media only screen and(max-width: 31.25em) {
+  @include responsive-3125em {
     min-height: 15vh;
     align-items: center;
   }
 
-  @media only screen and(max-width: 28em) {
+  @include responsive-28em {
     min-height: 20vh;
   }
 }
@@ -27,19 +27,19 @@
     display: flex;
     margin-right: 28rem;
 
-    @media only screen and(max-width: 62.5em) {
+    @include responsive-625em {
       margin-right: 17rem;
     }
 
-    @media only screen and(max-width: 50em) {
+    @include responsive-50em {
       margin-right: 10rem;
     }
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       margin-right: 5rem;
     }
 
-    @media only screen and(max-width: 31.25em) {
+    @include responsive-3125em {
       margin-right: 3.5rem;
     }
   }
