--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -21,12 +21,12 @@
     width: 100%;
     height: 100%;
 
-    @media only screen and(max-width: 41em) {
+    @include responsive-41em {
       -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 40%, 0 40%);
       clip-path: polygon(0 100%, 100% 100%, 100% 40%, 0 40%);
     }
 
-    @media only screen and(max-width: 31.25em) {
+    @include responsive-3125em {
       -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 35%, 0 35%);
       clip-path: polygon(0 100%, 100% 100%, 100% 35%, 0 35%);
     }
@@ -44,11 +44,11 @@
     color: $color-yellow;
   }
 
-  @media only screen and(max-width: 37.5em) {
+  @include responsive-375em {
     padding: 3rem 0;
   }
 
-  @media only screen and(max-width: 28em) {
+  @include responsive-28em {
     padding: 2rem 0;
   }
 }
