--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -8,11 +8,11 @@
     position: relative;
     margin-top: 5rem;
 
-    @media only screen and(max-width: 37.5em) {
+    @include responsive-375em {
       font-size: 5rem;   
     }
 
-    @media only screen and(max-width: 28em) {
+    @include responsive-28em {
       margin-top: 3rem;
       font-size: 3rem;
     }
@@ -28,11 +28,11 @@
       transform: translateY(-50%);
       border-radius: 1rem;
 
-      @media only screen and(max-width: 75em) {
+      @include responsive-75em {
         width: 20%;
       }
 
-      @media only screen and(max-width: 50em) {
+      @include responsive-50em {
         width: 15%;
       }
 
